# UCompress

./: CMakeLists.txt
JPEGDecoder/: CMakeLists.txt  main.cpp
JPEGEncoder/: CMakeLists.txt  main.cpp
coder/: CMakeLists.txt  main.cpp
common/: ArithmeticCoder.cpp  ArithmeticCoder.h  ArithmeticCoderCond.cpp  ArithmeticCoderCond.h  ArithmeticDecoder.cpp  ArithmeticDecoder.h  ArithmeticDecoderCond.cpp  ArithmeticDecoderCond.h  ArithmeticUtils.cpp  ArithmeticUtils.h  ArithmeticUtilsCond.cpp  ArithmeticUtilsCond.h  BitReader.h  BitWriter.h  CMakeLists.txt  Coder.h  Decoder.h  Hafman.cpp  Hafman.h  JpegCommon.cpp  JpegCommon.h  Reader.cpp  Reader.h  VanilaJpegCoder.cpp  VanilaJpegCoder.h  Writer.cpp  Writer.h  constants.h  optimizations.cpp  optimizations.h  stat.cpp  stat.h  utils.h
data/: paper1  test_d.txt  test_u.txt
data/out_c/: bib  book1  book2  geo  news  obj1  obj2  paper1  paper2  pic  progc  progl  progp  trans
decoder/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
